--- a/styles/notion.css
+++ b/styles/notion.css
@@ -386,3 +386,17 @@
 .notion-block-260baa77f1e1428b97fb14ac99c7c385 {
   display: none;
 }
+
+/* Override dark mode colors */
+.dark-mode {
+  --bg-color: #191919;
+}
+
+/* Override font weights */
+.notion-title {
+  font-weight: 700;
+}
+
+.notion-collection-header-title {
+  font-weight: 700;
+}
