--- a/styles/prism-theme.css
+++ b/styles/prism-theme.css
@@ -23,8 +23,12 @@
 }
 
 .dark-mode .notion .notion-inline-code {
-  background: rgb(71, 76, 80) !important;
-  color: #ff4081;
+  font-family: "SFMono-Regular", Menlo, Consolas, "PT Mono", "Liberation Mono", Courier, monospace;
+  line-height: normal;
+  background: rgba(135,131,120,0.15) !important;
+  color: #EB5757 !important;
+  border-radius: 3px;
+  font-size: 85%;
   padding: 0.2em 0.4em !important;
 }
 
